# pobsd-wcip

./: .gitignore  Cargo.toml  README.md  build.rs  wcip.core
.cargo/: config.toml
.github/workflows/: check.yml  rust-clippy.yml  rust.yml  test.yml
src/: config.rs  database.rs  launcher.rs  ls.rs  main.rs  steam_games.rs  tui_launcher.rs
src/os_suport/: lookup.rs  mod.rs
src/os_support/: mod.rs
src/steam/: mod.rs  os_lookup_table.rs  steam_webapi.rs
src/tui/: app_state.rs  game_details.rs  mod.rs
src/utils/: mod.rs  steam_webapi.rs  steamctl.rs
