[package]
name = "wcip"
description = "A small utility that list the games you own on Steam and can be played on OpenBSD"
authors = ["Hukadan <me@hukadan.org>"]
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/playonbsd-rs/pobsd-wcip"
documentation = "https://docs.rs/wcip"
license = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]

[dependencies]
pobsd-parser = "0.4.1"
pobsd-db = "0.1.4"
attohttpc = "0.24.1"
pledge = "0.4.1"
clap = { version = "4.2.1", optional = true }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.26.1", optional = true }
lazy_static = "1.4.0"

[features]
default = []
tui = ["dep:clap", "dep:tui", "dep:crossterm"]
