[package]
name = "wcip"
description = "A small utility that list the games you own on Steam and can be played on OpenBSD"
authors = ["Hukadan <me@hukadan.org>"]
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/playonbsd-rs/pobsd-wcip"
documentation = "https://docs.rs/wcip"
license = "MIT"
readme = "README.md"
keywords = ["OpenBSD", "PlayOnBSD"]

[dependencies]
libpobsd = "0.1.0"
attohttpc = "0.24.1"
pledge = "0.4.1"
lazy_static = "1.4.0"
directories = "5.0.0"
toml = "0.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

# Optional, only for TUI
config = { version = "0.13.3", features = ["toml"]}
clap = { version = "4.2.1", optional = true }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.26.1", optional = true }

[features]
default = ["tui"]
tui = ["dep:clap", "dep:tui", "dep:crossterm"]
